# bitrs

./: .gitignore  Cargo.toml
src/: main.rs  parse_bencode.rs  torrent.rs  tracker.rs
src/parse/: mod.rs
