[package]
name = "bitrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
reqwest = "0.12.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_bencode = "0.2.4"
serde_json = "1.0.115"
